--- a/Exercícios JS/aula 06/ex002.html
+++ b/Exercícios JS/aula 06/ex002.html
@@ -9,12 +9,12 @@
     <h1>Olá, mundo!</h1>
     <p>Meu primeiro código em JS!</p>
 
-
-
     <script>
-        window.alert('Olá mundo!')
-        window.confirm('Meu segundo código em JS')
-        window.prompt('Terceiro código teste!')
+            var n1 = Number(window.prompt('Digite o primeiro número: '))
+        var n2 = Number(window.prompt('Digite o segundo número: '))
+        s = n1 + n2
+        window.alert(`A soma entre ${n1} e ${n2} é ${s}`)
+
     </script>
 </body>
 </html>
