--- a/Exercícios JS/aula 06/ex003.html
+++ b/Exercícios JS/aula 06/ex003.html
@@ -7,14 +7,12 @@
 </head>
 <body>
     <h1>Olá, mundo!</h1>
-    <p>Meu primeiro código em JS!</p>
-
-
+    <p>Meu primeiro código JS!</p>
 
     <script>
-        window.alert('Olá mundo!')
-        window.confirm('Meu segundo código em JS')
-        window.prompt('Terceiro código teste!')
+        var nome = window.prompt('Qual seu nome? ')
+        document.write(`Seu nome é ${nome}!`)
+
     </script>
 </body>
 </html>
